[gd_scene format=3 uid="uid://couqdco7mtoxw"]

[ext_resource type="Script" uid="uid://f2exb7jpqcyn" path="res://ui/pause_menu/pause_menu.gd" id="1_2n0y6"]
[ext_resource type="PackedScene" uid="uid://o5kgpe620mq1" path="res://ui/settings_menu/settings_menu.tscn" id="2_jbgdu"]

[sub_resource type="Animation" id="Animation_mnjdh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_mg8bu"]
resource_name = "pause"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mnjdh"]
_data = {
&"RESET": SubResource("Animation_mnjdh"),
&"pause": SubResource("Animation_mg8bu")
}

[node name="PauseMenu" type="Control" unique_id=466377671]
process_mode = 3
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2n0y6")

[node name="Panel" type="Panel" parent="." unique_id=725523014]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" type="VBoxContainer" parent="Panel" unique_id=1964387006]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="Panel/Menu" unique_id=680106387]
layout_mode = 2
size_flags_vertical = 7

[node name="Resume" type="Button" parent="Panel/Menu/Control" unique_id=221934516]
custom_minimum_size = Vector2(100, 31)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 15.5)
text = "Resume"

[node name="Control2" type="Control" parent="Panel/Menu" unique_id=44047042]
layout_mode = 2
size_flags_vertical = 7

[node name="Settings" type="Button" parent="Panel/Menu/Control2" unique_id=1551681096]
custom_minimum_size = Vector2(100, 31)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 15.5)
text = "Settings"

[node name="Control3" type="Control" parent="Panel/Menu" unique_id=408243771]
layout_mode = 2
size_flags_vertical = 7

[node name="MainMenu" type="Button" parent="Panel/Menu/Control3" unique_id=652540632]
custom_minimum_size = Vector2(100, 31)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 15.5)
text = "Main Menu"

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=738053573]
libraries/ = SubResource("AnimationLibrary_mnjdh")

[node name="SettingsMenu" parent="." unique_id=1890138561 instance=ExtResource("2_jbgdu")]
process_mode = 3
layout_mode = 1
